Fixing alignment for text in calendar

--- a/src/App.css
+++ b/src/App.css
@@ -350,6 +350,7 @@ ul {
   display: flex;
   flex-direction: column;
   font-weight: bold;
+  text-align: center;
   /* height: 20%; */
   align-items: center;
   p {
